--- a/DQ2.ipynb
+++ b/DQ2.ipynb
@@ -102,7 +102,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calc_df['HHMMSS_USED'] = full_df['USEDTIME'].str.extract('(\\d{2}:\\d{2}:\\d{2})')"
+    "def get_seconds(used_time_string):\n",
+    "    \"\"\"calculate total second in job time\"\"\"\n",
+    "    days = 0\n",
+    "    day_break = used_time_string.split('-')\n",
+    "    if len(day_break) > 1:\n",
+    "        days = int(day_break[0])\n",
+    "        hms = day_break[1]\n",
+    "    else:\n",
+    "        hms = day_break[0]\n",
+    "    hours, mins, secs = [int(part) for part in hms.split(':')]\n",
+    "    total_seconds = secs + (mins * 60) + (hours * 3600) + (days * 86400)\n",
+    "    return total_seconds"
    ]
   },
   {
@@ -111,9 +122,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#re.findall('(\\d+)-', point2)\n",
-    "calc_df['DAYS_USED'] = full_df['USEDTIME'].str.extract('(\\d+)-')"
+    "calc_df['used_total_seconds'] = full_df['USEDTIME'].apply(get_seconds)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -121,9 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calc_df['HH_USED'] = calc_df['HHMMSS_USED'].str.extract('(\\d+):')\n",
-    "calc_df['MM_USED'] = calc_df['HHMMSS_USED'].str.extract(':(\\d+):')\n",
-    "calc_df['SS_USED'] = calc_df['HHMMSS_USED'].str.extract(':\\d+:(\\d+)')"
+    "#calc_df['HHMMSS_USED'] = full_df['USEDTIME'].str.extract('(\\d{2}:\\d{2}:\\d{2})')"
    ]
   },
   {
@@ -132,41 +147,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calc_df['DAYS_USED'] = calc_df['DAYS_USED'].fillna(0)"
+    "#re.findall('(\\d+)-', point2)\n",
+    "#calc_df['DAYS_USED'] = full_df['USEDTIME'].str.extract('(\\d+)-')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3813593 entries, 0 to 3813592\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column       Dtype \n",
-      "---  ------       ----- \n",
-      " 0   JOBID        object\n",
-      " 1   HHMMSS_USED  object\n",
-      " 2   DAYS_USED    int64 \n",
-      " 3   HH_USED      int64 \n",
-      " 4   MM_USED      int64 \n",
-      " 5   SS_USED      int64 \n",
-      "dtypes: int64(4), object(2)\n",
-      "memory usage: 174.6+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "calc_df['SS_USED'] = calc_df['SS_USED'].astype('int64')\n",
-    "calc_df['MM_USED'] = calc_df['MM_USED'].astype('int64')\n",
-    "calc_df['HH_USED'] = calc_df['HH_USED'].astype('int64')\n",
-    "calc_df['DAYS_USED'] = calc_df['DAYS_USED'].astype('int64')\n",
-    "\n",
-    "calc_df.info()"
+    "#calc_df['HH_USED'] = calc_df['HHMMSS_USED'].str.extract('(\\d+):')\n",
+    "#calc_df['MM_USED'] = calc_df['HHMMSS_USED'].str.extract(':(\\d+):')\n",
+    "#calc_df['SS_USED'] = calc_df['HHMMSS_USED'].str.extract(':\\d+:(\\d+)')"
    ]
   },
   {
@@ -175,19 +168,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "day_sec = calc_df['DAYS_USED'] * 24 * 60 * 60\n",
-    "hour_sec = calc_df['HH_USED']*3600\n",
-    "minute_sec = calc_df['MM_USED']*60\n",
-    "calc_df['TOTAL_SEC_USED'] = day_sec + hour_sec + minute_sec + calc_df['SS_USED']"
+    "#calc_df['DAYS_USED'] = calc_df['DAYS_USED'].fillna(0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3813593 entries, 0 to 3813592\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column              Dtype \n",
+      "---  ------              ----- \n",
+      " 0   JOBID               object\n",
+      " 1   used_total_seconds  int64 \n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 58.2+ MB\n"
+     ]
+    }
+   ],
    "source": [
-    "#calc_df.head()"
+    "#calc_df['SS_USED'] = calc_df['SS_USED'].astype('int64')\n",
+    "#calc_df['MM_USED'] = calc_df['MM_USED'].astype('int64')\n",
+    "#calc_df['HH_USED'] = calc_df['HH_USED'].astype('int64')\n",
+    "#calc_df['DAYS_USED'] = calc_df['DAYS_USED'].astype('int64')\n",
+    "\n",
+    "calc_df.info()"
    ]
   },
   {
@@ -196,7 +207,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_df['TOTAL_SEC_USED'] = calc_df['TOTAL_SEC_USED']"
+    "#day_sec = calc_df['DAYS_USED'] * 24 * 60 * 60\n",
+    "#hour_sec = calc_df['HH_USED']*3600\n",
+    "#minute_sec = calc_df['MM_USED']*60\n",
+    "#calc_df['TOTAL_SEC_USED'] = day_sec + hour_sec + minute_sec + calc_df['SS_USED']"
    ]
   },
   {
@@ -205,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#base1000_df.head()"
+    "#calc_df.head()"
    ]
   },
   {
@@ -214,12 +228,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#full_df = full_df.query('EXITCODE == \"0:0\" and PARTITION == \"production\"')"
+    "full_df['TOTAL_SEC_USED'] = calc_df['used_total_seconds']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2059302 entries, 1654 to 3813592\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column          Dtype \n",
+      "---  ------          ----- \n",
+      " 0   JOBID           object\n",
+      " 1   ACCOUNT         object\n",
+      " 2   USER            object\n",
+      " 3   REQMEM          object\n",
+      " 4   USEDMEM         object\n",
+      " 5   REQTIME         object\n",
+      " 6   USEDTIME        object\n",
+      " 7   NODES           int64 \n",
+      " 8   CPUS            int64 \n",
+      " 9   PARTITION       object\n",
+      " 10  EXITCODE        object\n",
+      " 11  STATE           object\n",
+      " 12  NODELIST        object\n",
+      " 13  TOTAL_SEC_USED  int64 \n",
+      "dtypes: int64(3), object(11)\n",
+      "memory usage: 235.7+ MB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-17-012bce43e94f>:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  temp_df.query('TOTAL_SEC_USED < 1921', inplace = True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_df = full_df.query('PARTITION == \"production\" or PARTITION == \"nogpfs\"')\n",
+    "temp_df.query('TOTAL_SEC_USED < 1921', inplace = True)\n",
+    "temp_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#base1000_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#full_df = full_df.query('EXITCODE == \"0:0\" and PARTITION == \"production\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +381,7 @@
        "Name: REQMEM_IDEN, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +540,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +984,7 @@
        "[282930 rows x 19 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,11 +995,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "full_df.to_csv(r'..\\dq2-accre-klt\\data\\full_df.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3211859, 19)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_df.shape"
    ]
   },
   {
